--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "prototype": "ts-node src/Prototype/index.ts",
-    "singleton": "ts-node src/Singleton/index.ts"
+    "singleton": "ts-node src/Singleton/index.ts",
+    "facade": "ts-node src/Facade/index.ts"
   },
   "author": "Wassef Ben Ahmed",
   "license": "ISC",
