Factory methods init

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "prototype": "ts-node src/Prototype/index.ts",
     "singleton": "ts-node src/Singleton/index.ts",
-    "facade": "ts-node src/Facade/index.ts"
+    "facade": "ts-node src/Facade/index.ts",
+    "factoryMethod": "ts-node src/FactoryMethod/index.ts"
   },
   "author": "Wassef Ben Ahmed",
   "license": "ISC",
