--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "singleton": "ts-node src/Singleton/index.ts",
     "facade": "ts-node src/Facade/index.ts",
     "factoryMethod": "ts-node src/FactoryMethod/src/index.ts",
-    "bridge": "ts-node src/Bridge/src/index.ts"
-
+    "bridge": "ts-node src/Bridge/src/index.ts",
+    "decorator": "ts-node src/Decorator/index.ts"
   },
   "author": "Wassef Ben Ahmed",
   "license": "ISC",
